chore(component): fix up the icon alignment and improve stories
affects: ak-navigation

--- a/packages/ak-navigation/src/components/less/ContainerItem.less
+++ b/packages/ak-navigation/src/components/less/ContainerItem.less
@@ -3,7 +3,7 @@
 @import '../../shared-variables.less';
 
 @icon-size: @ak-grid-size * 2.5;
-@icon-open-padding: 0 (@ak-grid-size * 3) 0 (@ak-grid-size * 1.5);
+@icon-open-padding: 0 (@ak-grid-size * 3) 0 (30 - @ak-grid-size * 2);
 @icon-closed-padding: (@container-closed-width - @ak-grid-size * 4 - @icon-size) / 2;
 
 .containerItemOuter {
